--- a/5-days-yoga-retreats.html
+++ b/5-days-yoga-retreats.html
@@ -145,7 +145,7 @@
                             <div class="p-4 bg-white rounded shadow-sm">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">5</span> Days Yoga Retreat</h2>
                                 <hr class="custom-underline">
-                                <p class="fw-bold mb-4">
+                                <p class="mb-4 text-justify">
                                     Join us at Himalayan Yoga Retreats for a deeper dive into yoga and meditation with our 5 Days Yoga Retreat. This retreat is designed for those who wish to explore a more immersive yoga experience in the tranquil surroundings of Rishikesh. Ideal for both beginners and experienced yogis, this program offers an extended opportunity to deepen your practice, relax, and rejuvenate.
                                 </p>
                                 <div class="text-center">
@@ -159,7 +159,7 @@
                             <div class="p-4 rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">O</span>verview</h2>
                                 <hr class="custom-underline">
-                                <p>Explore the detailed overview of our 5 Days Yoga Retreat, crafted to provide a balanced combination of yoga, meditation, and exploration. This program is perfect for anyone looking to deepen their practice in a serene environment.</p>
+                                <p class="text-justify">Explore the detailed overview of our 5 Days Yoga Retreat, crafted to provide a balanced combination of yoga, meditation, and exploration. This program is perfect for anyone looking to deepen their practice in a serene environment.</p>
                                 <div class="row g-4">
                                     <!-- Card 1: Yoga Retreat -->
                                     <div class="col-md-4">
@@ -230,7 +230,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">F</span>ee Details</h2>
                                 <hr class="custom-underline">
-                                <p>Find out all you need to know about the fees for our 5 Days Yoga Retreat, designed to cater to both domestic and international visitors, ensuring a comprehensive and fulfilling experience.</p>
+                                <p class="text-justify">Find out all you need to know about the fees for our 5 Days Yoga Retreat, designed to cater to both domestic and international visitors, ensuring a comprehensive and fulfilling experience.</p>
                                 <div class="row align-items-center">
                                     <!-- Fee Section as Cards -->
                                     <div class="col-lg-6 mb-4">
@@ -297,7 +297,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">E</span>ligibility</h2>
                                 <hr class="custom-underline">
-                                <p>Discover who is eligible to join our 5 Days Yoga Retreat. This retreat is open to individuals of all ages and experience levels who are seeking to deepen their yoga practice and connect with nature.</p>
+                                <p class="text-justify">Discover who is eligible to join our 5 Days Yoga Retreat. This retreat is open to individuals of all ages and experience levels who are seeking to deepen their yoga practice and connect with nature.</p>
                                 <div class="row">
 
                                     <div class="col-lg-7">
@@ -334,7 +334,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">D</span>aily Schedule</h2>
                                 <hr class="custom-underline">
-                                <p>Explore the daily schedule of our 5 Days Yoga Retreat to understand how each day is thoughtfully curated to offer a balanced blend of yoga, relaxation, and exploration.</p>
+                                <p class="text-justify">Explore the daily schedule of our 5 Days Yoga Retreat to understand how each day is thoughtfully curated to offer a balanced blend of yoga, relaxation, and exploration.</p>
                                 <div class="table-responsive">
                                     <table class="table table-hover table-striped daily-schedule-table">
                                         <thead class="table-theme">
@@ -485,7 +485,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ccommodation</h2>
                                 <hr class="custom-underline">
-                                <p>Learn about our comfortable and serene accommodation options that provide a restful retreat. Choose between different room types, all designed to enhance your stay with us and help you feel at home.</p>
+                                <p class="text-justify">Learn about our comfortable and serene accommodation options that provide a restful retreat. Choose between different room types, all designed to enhance your stay with us and help you feel at home.</p>
                                 <div class="row">
                                     <!-- First Carousel for Accommodation Option 1 -->
                                     <div class="col-lg-6 mb-4">
