--- a/7-days-yoga-retreats.html
+++ b/7-days-yoga-retreats.html
@@ -145,7 +145,7 @@
                             <div class="p-4 bg-white rounded shadow-sm">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">7</span> Days Yoga Retreat</h2>
                                 <hr class="custom-underline">
-                                <p class="fw-bold mb-4">
+                                <p class="mb-4 text-justify">
                                     Experience the ultimate journey of self-discovery and transformation with our 7 Days Yoga Retreat at Himalayan Yoga Retreats. This week-long retreat is perfect for those looking to fully immerse themselves in the practice of yoga, meditation, and mindful living. Set against the serene backdrop of Rishikesh and the majestic Himalayan foothills, this retreat offers a comprehensive program designed to rejuvenate your body, mind, and spirit.
                                 </p>
                                 <div class="text-center">
@@ -159,7 +159,7 @@
                             <div class="p-4 rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">O</span>verview</h2>
                                 <hr class="custom-underline">
-                                <p>Discover the holistic approach of our 7 Days Yoga Retreat, designed to deepen your understanding and practice of yoga in a tranquil environment. Each day is structured to provide a balanced mix of physical asanas, meditation, and spiritual teachings, ensuring a transformative experience for all participants.</p>
+                                <p class="text-justify">Discover the holistic approach of our 7 Days Yoga Retreat, designed to deepen your understanding and practice of yoga in a tranquil environment. Each day is structured to provide a balanced mix of physical asanas, meditation, and spiritual teachings, ensuring a transformative experience for all participants.</p>
                                 <div class="row g-4">
                                     <!-- Card 1: Yoga Retreat -->
                                     <div class="col-md-4">
@@ -230,7 +230,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4"><span class="text-theme fw-bold">F</span>ee Details</h2>
                                 <hr class="custom-underline">
-                                <p>Explore the fee structure for our 7 Days Yoga Retreat, tailored to accommodate both international and domestic participants. The fee includes all essential amenities to ensure a comfortable and enriching experience.</p>
+                                <p class="text-justify">Explore the fee structure for our 7 Days Yoga Retreat, tailored to accommodate both international and domestic participants. The fee includes all essential amenities to ensure a comfortable and enriching experience.</p>
                                 <div class="row align-items-center">
                                     <!-- Fee Section as Cards -->
                                     <div class="col-lg-6 mb-4">
@@ -298,7 +298,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4"><span class="text-theme fw-bold">E</span>ligibility</h2>
                                 <hr class="custom-underline">
-                                <p>Our retreat is open to everyone, regardless of experience. Whether you are a beginner or an experienced practitioner, we welcome all who wish to deepen their practice and connect with like-minded individuals.</p>
+                                <p class="text-justify">Our retreat is open to everyone, regardless of experience. Whether you are a beginner or an experienced practitioner, we welcome all who wish to deepen their practice and connect with like-minded individuals.</p>
                                 <div class="row">
                                     <div class="col-lg-7">
                                         <p class="fw-bold">You can enroll in the retreat if you:</p>
@@ -334,7 +334,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4"><span class="text-theme fw-bold">D</span>aily Schedule</h2>
                                 <hr class="custom-underline">
-                                <p>Join us for a well-balanced daily schedule that includes yoga, meditation, and personal time to explore the local surroundings. Each day is structured to provide an optimal blend of physical activity, spiritual practice, and relaxation.</p>
+                                <p class="text-justify">Join us for a well-balanced daily schedule that includes yoga, meditation, and personal time to explore the local surroundings. Each day is structured to provide an optimal blend of physical activity, spiritual practice, and relaxation.</p>
                                 <div class="table-responsive">
                                     <table class="table table-hover table-striped daily-schedule-table">
                                         <thead class="table-theme">
@@ -431,7 +431,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ccommodation</h2>
                                 <hr class="custom-underline">
-                                <p>Learn about our comfortable and serene accommodation options that provide a restful retreat. Choose between different room types, all designed to enhance your stay with us and help you feel at home.</p>
+                                <p class="text-justify">Learn about our comfortable and serene accommodation options that provide a restful retreat. Choose between different room types, all designed to enhance your stay with us and help you feel at home.</p>
                                 <div class="row">
                                     <!-- First Carousel for Accommodation Option 1 -->
                                     <div class="col-lg-6 mb-4">
