--- a/chopta-location.html
+++ b/chopta-location.html
@@ -145,7 +145,7 @@
                         <div class="p-4 bg-white rounded shadow-sm">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">H</span>ighlights</h2>
                             <hr class="custom-underline">
-                            <p>Chopta, known for its breathtaking beauty and unspoiled landscapes, offers a unique blend of adventure and serenity. From the highest Shiva temple at Tungnath to the scenic trails leading to Chandrashila peak, Chopta is a haven for trekkers and spiritual seekers alike.</p>
+                            <p class="text-justify">Chopta, known for its breathtaking beauty and unspoiled landscapes, offers a unique blend of adventure and serenity. From the highest Shiva temple at Tungnath to the scenic trails leading to Chandrashila peak, Chopta is a haven for trekkers and spiritual seekers alike.</p>
                             <div class="row">
                                 <!-- Left Side: List -->
                                 <div class="col-lg-7">
@@ -177,7 +177,7 @@
                         <div class="p-4 bg-white rounded shadow-sm">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ctivities</h2>
                             <hr class="custom-underline">
-                            <p>Chopta is a paradise for both adventurers and nature enthusiasts. Engage in activities like trekking to Tungnath, bird watching, camping amidst lush meadows, or simply soaking in the natural beauty of the Himalayas. Chopta provides a serene environment for yoga and meditation, making it a perfect getaway for relaxation and adventure.</p>
+                            <p class="text-justify">Chopta is a paradise for both adventurers and nature enthusiasts. Engage in activities like trekking to Tungnath, bird watching, camping amidst lush meadows, or simply soaking in the natural beauty of the Himalayas. Chopta provides a serene environment for yoga and meditation, making it a perfect getaway for relaxation and adventure.</p>
                             <div class="row">
                                 <!-- Left Side: List -->
                                 <div class="col-lg-7">
@@ -209,7 +209,7 @@
                         <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ccommodation</h2>
                             <hr class="custom-underline">
-                            <p>Experience comfortable stays in Chopta, ranging from quaint cottages to eco-friendly lodges. Most accommodations offer stunning views of the snow-capped Himalayan peaks, providing a peaceful setting for yoga, meditation, or simply unwinding in nature.</p>
+                            <p class="text-justify">Experience comfortable stays in Chopta, ranging from quaint cottages to eco-friendly lodges. Most accommodations offer stunning views of the snow-capped Himalayan peaks, providing a peaceful setting for yoga, meditation, or simply unwinding in nature.</p>
                             <div class="row">
                                 <!-- First Carousel for Accommodation Option 1 -->
                                 <div class="col-lg-6 mb-4">
@@ -299,7 +299,7 @@
                         <div class="p-4 bg-white rounded shadow-sm">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">G</span>etting There</h2>
                             <hr class="custom-underline">
-                            <p>Chopta is accessible by road from major cities like Delhi, Rishikesh, and Haridwar. The nearest railway station is Rishikesh (approx. 200 km), while the nearest airport is Jolly Grant Airport in Dehradun, around 220 km away. Regular taxis and buses are available to reach Chopta from these locations.</p>
+                            <p class="text-justify">Chopta is accessible by road from major cities like Delhi, Rishikesh, and Haridwar. The nearest railway station is Rishikesh (approx. 200 km), while the nearest airport is Jolly Grant Airport in Dehradun, around 220 km away. Regular taxis and buses are available to reach Chopta from these locations.</p>
                         </div>
                     </div>
                 </div>
