--- a/himalaya-location.html
+++ b/himalaya-location.html
@@ -145,7 +145,7 @@
                         <div class="p-4 bg-white rounded shadow-sm">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">H</span>ighlights</h2>
                             <hr class="custom-underline">
-                            <p>The Himalayas offer a unique blend of adventure, culture, and spirituality. From towering peaks to sacred monasteries, lush valleys to glacial rivers, the region provides a serene backdrop for trekking, meditation, and exploration. The Himalayas are also known for their biodiversity, encompassing several national parks and wildlife sanctuaries.</p>
+                            <p class="text-justify">The Himalayas offer a unique blend of adventure, culture, and spirituality. From towering peaks to sacred monasteries, lush valleys to glacial rivers, the region provides a serene backdrop for trekking, meditation, and exploration. The Himalayas are also known for their biodiversity, encompassing several national parks and wildlife sanctuaries.</p>
                             <div class="row">
                                 <!-- Left Side: List -->
                                 <div class="col-lg-7">
@@ -177,7 +177,7 @@
                         <div class="p-4 bg-white rounded shadow-sm">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ctivities</h2>
                             <hr class="custom-underline">
-                            <p>The Himalayas provide a range of activities for visitors, from trekking to the base of Mount Everest to meditative retreats in remote monasteries. Adventure enthusiasts can engage in white-water rafting, paragliding, and mountain biking, while others may opt for serene walks, wildlife safaris, or yoga and meditation amid nature's beauty.</p>
+                            <p class="text-justify">The Himalayas provide a range of activities for visitors, from trekking to the base of Mount Everest to meditative retreats in remote monasteries. Adventure enthusiasts can engage in white-water rafting, paragliding, and mountain biking, while others may opt for serene walks, wildlife safaris, or yoga and meditation amid nature's beauty.</p>
                             <div class="row">
                                 <!-- Left Side: List -->
                                 <div class="col-lg-7">
@@ -209,7 +209,7 @@
                         <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ccommodation</h2>
                             <hr class="custom-underline">
-                            <p>Stay amidst the majestic Himalayas in various accommodations, from luxury hotels to simple homestays. Choose to stay in eco-friendly lodges with panoramic views of the mountains, where you can enjoy the serene environment, and participate in local cultural experiences and wellness activities.</p>
+                            <p class="text-justify">Stay amidst the majestic Himalayas in various accommodations, from luxury hotels to simple homestays. Choose to stay in eco-friendly lodges with panoramic views of the mountains, where you can enjoy the serene environment, and participate in local cultural experiences and wellness activities.</p>
                             <div class="row">
                                 <!-- First Carousel for Accommodation Option 1 -->
                                 <div class="col-lg-6 mb-4">
@@ -299,7 +299,7 @@
                         <div class="p-4 bg-white rounded shadow-sm">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">G</span>etting There</h2>
                             <hr class="custom-underline">
-                            <p>The Himalayas are accessible from several entry points in India, including Leh, Manali, and Rishikesh. The nearest major airports are in Delhi, Leh, and Dehradun. You can reach the Himalayas by road, rail, or air, and local guides and transport services are available to explore this magnificent region.</p>
+                            <p class="text-justify">The Himalayas are accessible from several entry points in India, including Leh, Manali, and Rishikesh. The nearest major airports are in Delhi, Leh, and Dehradun. You can reach the Himalayas by road, rail, or air, and local guides and transport services are available to explore this magnificent region.</p>
                         </div>
                     </div>
                 </div>
