--- a/3-days-yoga-retreats.html
+++ b/3-days-yoga-retreats.html
@@ -144,7 +144,7 @@
                             <div class="p-4 bg-white rounded shadow-sm">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">3</span> Days Yoga Retreat</h2>
                                 <hr class="custom-underline">
-                                <p class="fw-bold mb-4">
+                                <p class="mb-4 text-justify">
                                     Discover the peaceful surroundings of Rishikesh with our 3 Days Yoga Retreat at Himalayan Yoga Retreats. This short but enriching experience is perfect for anyone looking to dive into the world of yoga and meditation. Whether you're a beginner or a seasoned practitioner, you'll enjoy a mix of yoga sessions, meditation, and meaningful activities in the calm and beautiful Himalayan foothills.
                                 </p>
                                 <div class="text-center">
@@ -158,7 +158,7 @@
                             <div class="p-4 rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">O</span>verview</h2>
                                 <hr class="custom-underline">
-                                <p>Discover the essence of our yoga retreats, designed to provide a comprehensive introduction to yoga and meditation practices, set in the tranquil surroundings of the Himalayas. Learn what makes our retreats unique and how they cater to both beginners and seasoned practitioners.</p>
+                                <p class="text-justify">Discover the essence of our yoga retreats, designed to provide a comprehensive introduction to yoga and meditation practices, set in the tranquil surroundings of the Himalayas. Learn what makes our retreats unique and how they cater to both beginners and seasoned practitioners.</p>
                                 <div class="row g-4">
                                     <!-- Card 1: Yoga Retreat -->
                                     <div class="col-md-4">
@@ -229,7 +229,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4"><span class="text-theme fw-bold">F</span>ee Details</h2>
                                 <hr class="custom-underline">
-                                <p>Find out all you need to know about the fees for our yoga retreats, tailored to meet the needs of both Indian and international guests. Explore the various inclusions that ensure a holistic and enriching experience during your stay.</p>
+                                <p class="text-justify">Find out all you need to know about the fees for our yoga retreats, tailored to meet the needs of both Indian and international guests. Explore the various inclusions that ensure a holistic and enriching experience during your stay.</p>
                                 <div class="row align-items-center">
                                     <!-- Fee Section as Cards -->
                                     <div class="col-lg-6 mb-4">
@@ -300,7 +300,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4"><span class="text-theme fw-bold">E</span>ligibility</h2>
                                 <hr class="custom-underline">
-                                <p>Understand who can join our yoga retreats. Whether you are new to yoga or an experienced practitioner, our retreats are open to everyone looking to deepen their practice and explore a yogic lifestyle.</p>
+                                <p class="text-justify">Understand who can join our yoga retreats. Whether you are new to yoga or an experienced practitioner, our retreats are open to everyone looking to deepen their practice and explore a yogic lifestyle.</p>
                                 <div class="row">
 
                                     <div class="col-lg-7">
@@ -337,7 +337,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4"><span class="text-theme fw-bold">D</span>aily Schedule</h2>
                                 <hr class="custom-underline">
-                                <p>Get a glimpse of a typical day at our yoga retreats. From sunrise yoga sessions to evening meditation, each day is thoughtfully curated to offer a balanced blend of practice, rest, and exploration.</p>
+                                <p class="text-justify">Get a glimpse of a typical day at our yoga retreats. From sunrise yoga sessions to evening meditation, each day is thoughtfully curated to offer a balanced blend of practice, rest, and exploration.</p>
                                 <div class="table-responsive">
                                     <table class="table table-hover table-striped daily-schedule-table">
                                         <thead class="table-theme">
@@ -435,7 +435,7 @@
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ccommodation</h2>
                                 <hr class="custom-underline">
-                                <p>Learn about our comfortable and serene accommodation options that provide a restful retreat. Choose between different room types, all designed to enhance your stay with us and help you feel at home.</p>
+                                <p class="text-justify">Learn about our comfortable and serene accommodation options that provide a restful retreat. Choose between different room types, all designed to enhance your stay with us and help you feel at home.</p>
                                 <div class="row">
                                     <!-- First Carousel for Accommodation Option 1 -->
                                     <div class="col-lg-6 mb-4">
