--- a/rishikesh-location.html
+++ b/rishikesh-location.html
@@ -145,7 +145,7 @@
                         <div class="p-4 bg-white rounded shadow-sm">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">H</span>ighlights</h2>
                             <hr class="custom-underline">
-                            <p>Rishikesh, known as the 'Yoga Capital of the World,' offers a unique blend of spiritual, cultural, and natural experiences. From renowned yoga and meditation centers to the sacred Ganges River, Rishikesh is a destination that captivates the heart of every visitor. Discover the city’s ancient temples, peaceful ashrams, and its status as the gateway to the Himalayas.</p>
+                            <p class="text-justify">Rishikesh, known as the 'Yoga Capital of the World,' offers a unique blend of spiritual, cultural, and natural experiences. From renowned yoga and meditation centers to the sacred Ganges River, Rishikesh is a destination that captivates the heart of every visitor. Discover the city’s ancient temples, peaceful ashrams, and its status as the gateway to the Himalayas.</p>
                             <div class="row">
                                 <!-- Left Side: List -->
                                 <div class="col-lg-7">
@@ -177,7 +177,7 @@
                         <div class="p-4 bg-white rounded shadow-sm">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ctivities</h2>
                             <hr class="custom-underline">
-                            <p>Rishikesh is not only a spiritual haven but also an adventurer's paradise. Engage in river rafting on the mighty Ganges, participate in the captivating Ganga Aarti, trek to stunning waterfalls, or immerse yourself in yoga and meditation workshops amidst nature. The city offers something for everyone, making it an ideal destination for both thrill-seekers and peace-seekers alike.</p>
+                            <p class="text-justify">Rishikesh is not only a spiritual haven but also an adventurer's paradise. Engage in river rafting on the mighty Ganges, participate in the captivating Ganga Aarti, trek to stunning waterfalls, or immerse yourself in yoga and meditation workshops amidst nature. The city offers something for everyone, making it an ideal destination for both thrill-seekers and peace-seekers alike.</p>
                             <div class="row">
                                 <!-- Left Side: List -->
                                 <div class="col-lg-7">
@@ -210,7 +210,7 @@
                         <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ccommodation</h2>
                             <hr class="custom-underline">
-                            <p>Stay in the serene settings of Rishikesh, where a variety of accommodation options await you. From cozy ashrams to boutique hotels, each place offers a peaceful environment conducive to relaxation and self-discovery. Enjoy the comfort of your stay while being surrounded by the breathtaking views of the Himalayas and the sacred Ganges River.</p>
+                            <p class="text-justify">Stay in the serene settings of Rishikesh, where a variety of accommodation options await you. From cozy ashrams to boutique hotels, each place offers a peaceful environment conducive to relaxation and self-discovery. Enjoy the comfort of your stay while being surrounded by the breathtaking views of the Himalayas and the sacred Ganges River.</p>
                             <div class="row">
                                 <!-- First Carousel for Accommodation Option 1 -->
                                 <div class="col-lg-6 mb-4">
@@ -300,7 +300,7 @@
                         <div class="p-4 bg-white rounded shadow-sm">
                             <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">G</span>etting There</h2>
                             <hr class="custom-underline">
-                            <p>Rishikesh is well-connected by road, rail, and air. The nearest airport is the Jolly Grant Airport in Dehradun, just 35 km away. Regular bus services and private taxis are available from major cities like Delhi, Haridwar, and Dehradun.</p>
+                            <p class="text-justify">Rishikesh is well-connected by road, rail, and air. The nearest airport is the Jolly Grant Airport in Dehradun, just 35 km away. Regular bus services and private taxis are available from major cities like Delhi, Haridwar, and Dehradun.</p>
                         </div>
                     </div>
                 </div>
