--- a/3-days-yoga-retreats.html
+++ b/3-days-yoga-retreats.html
@@ -448,7 +448,7 @@
                                                     <img src="images/dinning area.jpg" class="d-block w-100" alt="Room Interior">
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img src="images/sharedroom1.jpg" class="d-block w-100" alt="Yoga Area">
+                                                    <img src="images/bathroom.jpg" class="d-block w-100" alt="Bathroom">
                                                 </div>
                                             </div>
                                             <a class="carousel-control-prev" href="#carouselAccommodation1" role="button" data-bs-slide="prev">
@@ -463,10 +463,10 @@
                                         <!-- Amenities List for Accommodation Option 1 -->
                                         <ul class="list-group list-group-flush mt-3">
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-bed text-theme me-2"></i>Single Beds
+                                                <i class="fas fa-bed text-theme me-2"></i>Private Room
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-bath text-theme me-2"></i>AC / Wi-Fi
+                                                <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
                                                 <i class="fas fa-utensils text-theme me-2"></i>In-Room Dining Service
@@ -476,7 +476,7 @@
                                             </li>
                                         </ul>
                                     </div>
-
+    
                                     <!-- Second Carousel for Accommodation Option 2 -->
                                     <div class="col-lg-6 mb-4">
                                         <div id="carouselAccommodation2" class="carousel slide" data-bs-ride="carousel">
@@ -503,13 +503,13 @@
                                         <!-- Amenities List for Accommodation Option 2 -->
                                         <ul class="list-group list-group-flush mt-3">
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-bed text-theme me-2"></i>Double Bed
+                                                <i class="fas fa-bed text-theme me-2"></i>Shared Room
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
                                                 <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-tree text-theme me-2"></i>Private Balcony with Garden View
+                                                <i class="fas fa-tree text-theme me-2"></i>Welcoming Reception Area
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
                                                 <i class="fas fa-yin-yang text-theme me-2"></i>Complimentary Yoga Mats & Props
