--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					</div>
 					<div class="col-lg-6 mb-2">
 						<div class="about-content">
-							<h2 class="mb-4">Who We Are</h2>
+							<h2 class="mb-4 text-theme">About Us</h2>
 							<p class="mb-2 text-justify">At Himalayan Yoga Retreat, we invite you to embark on a transformative journey of self-discovery in the heart of Rishikesh, the "Yoga Capital of the World." Our retreat offers a unique opportunity to experience the profound physical, emotional, mental, and spiritual benefits of yoga. Guided by experienced instructors, you will deepen your practice with enriching asanas, pranayama, yoga Nidra, and cleansing yogic purification techniques, all while exploring various meditation methods.
 							Nestled along the sacred banks of the Ganges River, our retreat is set amidst the serene beauty and spiritual energy of the Himalayas. This peaceful environment provides the perfect backdrop for awakening your inner strength and achieving personal growth.
 							</p>
