--- a/himalaya-location.html
+++ b/himalaya-location.html
@@ -222,7 +222,7 @@
                                                 <img src="images/dinning area.jpg" class="d-block w-100" alt="Room Interior">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="images/sharedroom1.jpg" class="d-block w-100" alt="Yoga Area">
+                                                <img src="images/bathroom.jpg" class="d-block w-100" alt="Bathroom">
                                             </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#carouselAccommodation1" role="button" data-bs-slide="prev">
@@ -237,10 +237,10 @@
                                     <!-- Amenities List for Accommodation Option 1 -->
                                     <ul class="list-group list-group-flush mt-3">
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-bed text-theme me-2"></i>Single Beds
+                                            <i class="fas fa-bed text-theme me-2"></i>Private Room
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-bath text-theme me-2"></i>AC / Wi-Fi
+                                            <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
                                             <i class="fas fa-utensils text-theme me-2"></i>In-Room Dining Service
@@ -277,13 +277,13 @@
                                     <!-- Amenities List for Accommodation Option 2 -->
                                     <ul class="list-group list-group-flush mt-3">
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-bed text-theme me-2"></i>Double Bed
+                                            <i class="fas fa-bed text-theme me-2"></i>Shared Room
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
                                             <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-tree text-theme me-2"></i>Private Balcony with Garden View
+                                            <i class="fas fa-tree text-theme me-2"></i>Welcoming Reception Area
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
                                             <i class="fas fa-yin-yang text-theme me-2"></i>Complimentary Yoga Mats & Props
