--- a/5-days-yoga-retreats.html
+++ b/5-days-yoga-retreats.html
@@ -149,7 +149,7 @@
                                     Join us at Himalayan Yoga Retreats for a deeper dive into yoga and meditation with our 5 Days Yoga Retreat. This retreat is designed for those who wish to explore a more immersive yoga experience in the tranquil surroundings of Rishikesh. Ideal for both beginners and experienced yogis, this program offers an extended opportunity to deepen your practice, relax, and rejuvenate.
                                 </p>
                                 <div class="text-center">
-                                    <img src="images/yoga-retreats(2).jpg" class="img-fluid rounded" alt="5 Days Yoga Retreat">
+                                    <img src="images/yoga-retreats.jpg" class="img-fluid rounded" alt="5 Days Yoga Retreat">
                                 </div>
                             </div>
                         </div>
@@ -516,13 +516,13 @@
                                                 <i class="fas fa-bed text-theme me-2"></i>Private Room
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
+                                                <i class="fas fa-smile text-theme me-2"></i>Welcoming Reception Area
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
                                                 <i class="fas fa-utensils text-theme me-2"></i>In-Room Dining Service
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-clipboard-list text-theme me-2"></i>Yoga Equipment & Learning Materials
+                                                <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
                                             </li>
                                         </ul>
                                     </div>
@@ -556,13 +556,13 @@
                                                 <i class="fas fa-bed text-theme me-2"></i>Shared Room
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
+                                                <i class="fas fa-smile text-theme me-2"></i>Welcoming Reception Area
+                                            </li>
+                                            <li class="list-group-item d-flex align-items-center">
+                                                <i class="fas fa-utensils text-theme me-2"></i>In-Room Dining Service
+                                            </li>
+                                            <li class="list-group-item d-flex align-items-center">
                                                 <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
-                                            </li>
-                                            <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-tree text-theme me-2"></i>Welcoming Reception Area
-                                            </li>
-                                            <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-yin-yang text-theme me-2"></i>Complimentary Yoga Mats & Props
                                             </li>
                                         </ul>
                                     </div>
