--- a/7-days-yoga-retreats.html
+++ b/7-days-yoga-retreats.html
@@ -462,13 +462,13 @@
                                                 <i class="fas fa-bed text-theme me-2"></i>Private Room
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
+                                                <i class="fas fa-smile text-theme me-2"></i>Welcoming Reception Area
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
                                                 <i class="fas fa-utensils text-theme me-2"></i>In-Room Dining Service
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-clipboard-list text-theme me-2"></i>Yoga Equipment & Learning Materials
+                                                <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
                                             </li>
                                         </ul>
                                     </div>
@@ -502,13 +502,13 @@
                                                 <i class="fas fa-bed text-theme me-2"></i>Shared Room
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
+                                                <i class="fas fa-smile text-theme me-2"></i>Welcoming Reception Area
+                                            </li>
+                                            <li class="list-group-item d-flex align-items-center">
+                                                <i class="fas fa-utensils text-theme me-2"></i>In-Room Dining Service
+                                            </li>
+                                            <li class="list-group-item d-flex align-items-center">
                                                 <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
-                                            </li>
-                                            <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-tree text-theme me-2"></i>Welcoming Reception Area
-                                            </li>
-                                            <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-yin-yang text-theme me-2"></i>Complimentary Yoga Mats & Props
                                             </li>
                                         </ul>
                                     </div>
