--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
 				<div class="row align-items-center mt-3">
 					<div class="col-12">
 						<p class="text-center text-dark m-0">
-							&copy; 2024 <a class="text-dark border-bottom" href="/">Himalayas Yoga Retreat</a>. All Rights Reserved.
+							&copy; 2024 <a class="text-dark border-bottom" href="index.html">Himalayas Yoga Retreat</a>. All Rights Reserved.
 							Designed by <a class="text-dark border-bottom" href="https://jakhmolaweb.co.in/">Jakhmola Web House</a>
 						</p>
 					</div>
