--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 		<header class="container-fluid position-relative p-0">
 			<!-- Navbar Section -->
 			<nav class="navbar navbar-expand-lg navbar-dark px-4 py-3 py-lg-0">
-				<a href="/" class="navbar-brand p-0">
+				<a href="index.html" class="navbar-brand p-0">
 					<img src='images/logo.jpeg' alt="Logo" rel="preload" class="navbar-brand-image" />
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -80,7 +80,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarCollapse">
 					<div class="navbar-nav ms-auto py-0">
-						<a href="/" class="nav-item nav-link active">Home</a>
+						<a href="index.html" class="nav-item nav-link active">Home</a>
 						<a href="about.html" class="nav-item nav-link">About Us</a>
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Yoga Retreats</a>
@@ -111,7 +111,7 @@
 			<div class="row py-5">
 				<div class="col-12 mt-lg-5 text-center">
 					<h1 class="display-4 text-white animated zoomIn">Contact</h1>
-					<a href="/" class="h5 text-white">Home</a>
+					<a href="index.html" class="h5 text-white">Home</a>
 					<i class="fas fa-angle-right text-white px-2"></i>
 					<a href="contact.html" class="h5 text-white">Contact</a>
 				</div>
@@ -212,7 +212,7 @@
 				<div class="row align-items-center mt-3">
 					<div class="col-12">
 						<p class="text-center text-dark m-0">
-							&copy; 2024 <a class="text-dark border-bottom" href="/">Himalayas Yoga Retreat</a>. All Rights Reserved.
+							&copy; 2024 <a class="text-dark border-bottom" href="index.html">Himalayas Yoga Retreat</a>. All Rights Reserved.
 							Designed by <a class="text-dark border-bottom" href="https://jakhmolaweb.co.in/">Jakhmola Web House</a>
 						</p>
 					</div>
