--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
 						<div class="contact-info p-4">
 							<h5 class="text-theme fw-bold mb-3">Contact Us</h5>
 							<h2 class="mb-4">Get In Touch</h2>
-							<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc id varius nunc.</p>
+							<p class="mb-4">Feel free to visit us at our serene location or contact us anytime for any inquiries or assistance. We are here to help you start your journey toward mindfulness and well-being.</p>
 							<ul class="list-unstyled">
 								<li class="d-flex align-items-center mb-3">
 									<span class="contact-icon bg-theme rounded-circle d-flex justify-content-center align-items-center me-3">
