--- a/7-days-yoga-retreats.html
+++ b/7-days-yoga-retreats.html
@@ -132,7 +132,7 @@
                                     </a>
                                 </li>
                             </ul>
-                            <a href="register.html" class="btn btn-side-nav hover-fill theme-design py-md-2 px-md-4">Book Now</a>
+                            <a href="registeration.html" class="btn btn-side-nav hover-fill theme-design py-md-2 px-md-4">Book Now</a>
                         </div>
                     </div>
 
