--- a/5-days-yoga-retreats.html
+++ b/5-days-yoga-retreats.html
@@ -225,6 +225,32 @@
                             </div>
                         </div>
 
+                        <!-- Food Section -->
+                        <div id="food-gallery" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
+                            <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
+                                <h2 class="text-dark mb-4"><span class="text-theme fw-bold">F</span>ood Gallery</h2>
+                                <hr class="custom-underline">
+                                <p class="text-justify">Experience a diverse selection of nutritious and delicious vegetarian meals that are thoughtfully prepared to complement your yoga journey. Our meals are made from fresh, organic ingredients, providing a balance of flavors and nourishment, enhancing your overall wellness during the retreat.</p>
+                                <div class="row align-items-center">
+                                    <!-- Image 1 -->
+                                    <div class="col-md-4 mb-3 text-center">
+                                        <img src="images/food-breakfast.jpg" alt="Healthy Breakfast" class="img-fluid rounded shadow-sm">
+                                        <p class="py-4 bg-theme text-white fw-bold">Healthy Breakfast</p>
+                                    </div>
+                                    <!-- Image 2 -->
+                                    <div class="col-md-4 mb-3 text-center">
+                                        <img src="images/food-lunch.jpg" alt="Organic Lunch" class="img-fluid rounded shadow-sm">
+                                        <p class="py-4 bg-theme text-white fw-bold">Organic Lunch</p>
+                                    </div>
+                                    <!-- Image 3 -->
+                                    <div class="col-md-4 mb-3 text-center">
+                                        <img src="images/food-dinner.jpg" alt="Dinner with Fresh Ingredients" class="img-fluid rounded shadow-sm">
+                                        <p class="py-4 bg-theme text-white fw-bold">Evening Feast</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Fee Details Section -->
                         <div id="fee-detail" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
@@ -604,7 +630,7 @@
 						<h5 class="text-uppercase mb-4 fw-bold text-theme text-start">Contact Info</h5>
 						<ul class="list-unstyled text-start">
 							<li class="mb-2"><i class="fas fa-map-marker-alt text-theme me-2"></i><a href="https://www.google.com/maps/place/India" class="text-dark">150 meter Ahead of Hosteller Hostel, Balaknath Temple Road, Upper Tapovan, Rishikesh, Uttarakhand 249192</a></li>
-							<li class="mb-2"><i class="fas fa-envelope text-theme me-2"></i><a href="mailto:yogaretreatinhimalaya@gmail.com" class="text-dark">vikashnawani999@gmail.com</a></li>
+							<li class="mb-2"><i class="fas fa-envelope text-theme me-2"></i><a href="mailto:yogaretreatinhimalaya@gmail.com" class="text-dark">yogaretreatinhimalaya@gmail.com</a></li>
 							<li><i class="bi bi-telephone-fill text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
 						</ul>
 					</div>
