--- a/registeration.html
+++ b/registeration.html
@@ -227,7 +227,7 @@
 						<p class="text-justify">Thank you for choosing to embark on this journey of mindfulness and inner peace with us. We are honored to be a part of your yoga experience and are here to guide you every step of the way.</p>
 						<div class="d-flex justify-content-start justify-start-md-start">
 							<a class="btn hover-fill btn-theme btn-square me-2" href="https://www.instagram.com/himalayasyogaretreat/"><i class="fab fa-instagram fw-normal"></i></a>
-							<a class="btn hover-fill btn-theme btn-square" href="https://www.threads.net/@himalayasyogaretreat/"><i class="fas fa-comments fw-normal"></i></a>
+							<a class="btn hover-fill btn-theme btn-square" href="https://www.youtube.com/@YogaretreatInHimalaya/"><i class="fab fa-youtube fw-normal"></i></a>
 						</div>
 					</div>
 					<!-- Quick Links -->
