--- a/index.html
+++ b/index.html
@@ -525,8 +525,8 @@
 								<img class="img-fluid w-100" src="images/team-(1).jpg" alt="Team Member">
 							</div>
 							<div class="text-center py-4">
-								<h4 class="fw-bold text-theme">Vikas</h4>
-								<p class="text-uppercase m-0 text-muted">Ashtanga Yoga Teacher</p>
+								<h4 class="fw-bold text-theme">Vikash Ji</h4>
+								<p class="text-uppercase m-0 text-muted">Founder & Yoga Teacher</p>
 							</div>
 						</div>
 					</div>
@@ -536,7 +536,7 @@
 								<img class="img-fluid w-100" src="images/team-(2).jpg" alt="Team Member">
 							</div>
 							<div class="text-center py-4">
-								<h4 class="fw-bold text-theme">Gaurav</h4>
+								<h4 class="fw-bold text-theme">Gaurav Ji</h4>
 								<p class="text-uppercase m-0 text-muted">Hatha Yoga Teacher</p>
 							</div>
 						</div>
@@ -547,7 +547,7 @@
 								<img class="img-fluid w-100" src="images/team-(3).jpg" alt="Team Member">
 							</div>
 							<div class="text-center py-4">
-								<h4 class="fw-bold text-theme">Subhash Singh Rawat</h4>
+								<h4 class="fw-bold text-theme">Subhash Ji</h4>
 								<p class="text-uppercase m-0 text-muted">Ashtanga Yoga Teacher</p>
 							</div>
 						</div>
@@ -597,6 +597,18 @@
 									<img class="slide-img" src="images/yoga-6.jpeg" alt="">
 								</div>
 							</li>
+
+							<li>
+								<div class="box">
+									<img class="slide-img" src="images/yoga-7.jpeg" alt="">
+								</div>
+							</li>
+
+							<li>
+								<div class="box">
+									<img class="slide-img" src="images/yoga-8.jpeg" alt="">
+								</div>
+							</li>
 						
 						</ul>
 					</div>
@@ -614,7 +626,7 @@
 						<p class="text-justify">Thank you for choosing to embark on this journey of mindfulness and inner peace with us. We are honored to be a part of your yoga experience and are here to guide you every step of the way.</p>
 						<div class="d-flex justify-content-start justify-start-md-start">
 							<a class="btn hover-fill btn-theme btn-square me-2" href="https://www.instagram.com/himalayasyogaretreat/"><i class="fab fa-instagram fw-normal"></i></a>
-							<a class="btn hover-fill btn-theme btn-square" href="https://www.threads.net/@himalayasyogaretreat/"><i class="fas fa-comments fw-normal"></i></a>
+							<a class="btn hover-fill btn-theme btn-square" href="https://www.youtube.com/@YogaretreatInHimalaya/"><i class="fab fa-youtube fw-normal"></i></a>
 						</div>
 					</div>
 					<!-- Quick Links -->
