--- a/rishikesh-location.html
+++ b/rishikesh-location.html
@@ -249,6 +249,9 @@
                                         <li class="list-group-item d-flex align-items-center">
                                             <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
                                         </li>
+                                        <li class="list-group-item d-flex align-items-center">
+                                            <i class="fas fa-snowflake text-theme me-2"></i> AC & Heater available on request
+                                        </li>
                                     </ul>
                                 </div>
 
@@ -288,6 +291,9 @@
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
                                             <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
+                                        </li>
+                                        <li class="list-group-item d-flex align-items-center">
+                                            <i class="fas fa-snowflake text-theme me-2"></i> AC & Heater available on request
                                         </li>
                                     </ul>
                                 </div>
